--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <div class="col-md-8">
                     <p>
                         6년차 백앤드 개발자
+			<br>이자 토망이 오너
                     </p>
                 </div>
             </div>
