--- a/index.html
+++ b/index.html
@@ -154,32 +154,16 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
+            <li>springboot</li>
+            <li>springMVC</li>
+            <li>spring Data JPA/Mongo</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>OracleDB</li>
+            <li>MongoDB</li>
+            <li>Kafka</li>
+            <li>Redis</li>
+            <li>ElasticSearch/Kibana</li>
+            <li>Graphql</li>
         </ul>
     </div>
     <!-- End #skills -->
