--- a/index.html
+++ b/index.html
@@ -84,29 +84,22 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2018.07 ~ 현재">
+                <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
+                <h4>Software 개발/운영</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    짧게는 1년, 길게는 10년치 Capa Simulation을 통해 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당자
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2023.02 ~ 현재">
+                <h3>통합알림센터 개발/운영(Backend)</h3>
+                <h4>일 평균 Request 400만건의 API 개발/운영</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    약 50개의 사내 Legacy 시스템들에게 알림 발송 rest api를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 받을수 있는 알림센터를 운영
                 </p>
             </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
+		
         </div>
     </div>
     <!-- End #experience -->
@@ -156,7 +149,7 @@
         <ul>
             <li>springboot</li>
             <li>springMVC</li>
-            <li>spring Data JPA/Mongo</li>
+            <li>spring Data Jpa/Mongo</li>
             <li>Java</li>
             <li>OracleDB</li>
             <li>MongoDB</li>
