--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 </p>
             </div>
 
-            <div data-date="2023.02 ~ 현재">
+            <div data-date="2023.01 ~ 현재">
                 <h3>통합알림센터 개발/운영(Backend)</h3>
-                <h4>일 평균 Request 400만건의 API 개발/운영</h4>
+                <h4>일 평균 request 400만건의 API 개발/운영</h4>
                 <p>
-                    약 50개의 사내 Legacy 시스템들에게 알림 발송 rest api를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 받을수 있는 알림센터를 운영
+                    약 50개의 사내 Legacy 시스템들에게 알림 발송 rest api를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 전달하는 알림센터를 운영
                 </p>
             </div>
 		
