--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="2018.07 ~ 현재">
+            <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
                 <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
                 <h4>Software 개발/운영</h4>
                 <p>
