--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </p>
             </div>
 
-            <div data-date="2023.01 ~ 현재">
+            <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
                 <h3>통합알림센터 개발/운영(Backend)</h3>
                 <h4>일 평균 request 400만건의 API 개발/운영</h4>
                 <p>
