--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>위형규22334443</h1>
+            <h1>위형규</h1>
             <h2>Software Engineer</h2>
         </div>
         <!-- End #lead-content -->
