--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div id="lead-content">
             <h1>위형규</h1>
             <h2>Software Engineer</h2>
-	    <a href="https://github.com/dnl1029">github 주소</a>
-	    <a href="https://dnl1029.tistory.com">blog 주소</a>
+	    <a href="https://github.com/dnl1029" style = "color: white;">github 주소</a>
+	    <a href="https://dnl1029.tistory.com" style = "color: white;">blog 주소</a>
         </div>
         <!-- End #lead-content -->
 
