--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         <div id="lead-content">
             <h1>위형규</h1>
             <h2>Software Engineer</h2>
-	    <a href="https://github.com/dnl1029" style = "color: white;">github 주소</a>
+	    <a href="https://github.com/dnl1029" style = "color: white;">github</a>
+	    <p>: https://github.com/dnl1029</p>
 		<br>
-	    <a href="https://dnl1029.tistory.com" style = "color: white;">blog 주소</a>
+	    <a href="https://dnl1029.tistory.com" style = "color: white;">blog</a>
+	    <p>: https://dnl1029.tistory.com</p>
         </div>
         <!-- End #lead-content -->
 
