--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <div id="lead-content">
             <h1>위형규</h1>
             <h2>Software Engineer</h2>
-	    <a href="https://github.com/dnl1029" style = "color: white;">github</a>
-	    <p>: https://github.com/dnl1029</p>
+	    <span style="color:white;">github: </span>
+	    <a href="https://github.com/dnl1029" style = "color: white;">https://github.com/dnl1029</a>
 		<br>
-	    <a href="https://dnl1029.tistory.com" style = "color: white;">blog</a>
-	    <p>: https://dnl1029.tistory.com</p>
+	    <span style="color:white;">blog: </span>
+	    <a href="https://dnl1029.tistory.com" style = "color: white;">https://dnl1029.tistory.com</a>
         </div>
         <!-- End #lead-content -->
 
