--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>위형규</h1>
-            <h2>Software Engineer</h2>
+            <h2>Software Backend Engineer</h2>
 	    <span style="color:white;">github  :    </span>
 	    <a href="https://github.com/dnl1029" style = "color: white;">https://github.com/dnl1029</a>
 		<br>
