--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
             </form>
         </div>
         <!-- End #contact-form -->
-    </div>
-	-->
+    </div>-->
     <!-- End #contact -->
 
     <footer>
