--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+	    <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
+                <h3>사내 알림센터 개발/운영(Backend)</h3>
+                <h4>일 평균 Request 400만건의 MSA 기반 Rest API 서버 개발/운영</h4>
+                <p>
+                    약 50개의 사내 Legacy 시스템들에게 알림 발송 Rest API를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 전달하는 알림센터를 운영
+                </p>
+            </div>
             <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
                 <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
                 <h4>Software 개발/운영</h4>
@@ -94,15 +101,6 @@
                     짧게는 1년, 길게는 10년치 Capa Simulation을 통해 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당자
                 </p>
             </div>
-
-            <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
-                <h3>사내 알림센터 개발/운영(Backend)</h3>
-                <h4>일 평균 request 400만건의 API 개발/운영</h4>
-                <p>
-                    약 50개의 사내 Legacy 시스템들에게 알림 발송 rest api를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 전달하는 알림센터를 운영
-                </p>
-            </div>
-		
         </div>
     </div>
     <!-- End #experience -->
