--- a/index.html
+++ b/index.html
@@ -91,14 +91,23 @@
                 <h3>사내 알림센터 개발/운영(Backend)</h3>
                 <h4>일 평균 Request 400만건의 MSA 기반 Rest API 서버 개발/운영</h4>
                 <p>
-                    ⦁ 약 50개의 사내 Legacy 시스템들에게 알림 발송 Rest API를 제공, 시스템에서 발생하는 수많은 알림 중 사용자가 필요한 알림만 구독하여 메일, 카카오톡, 사내 메신저들로 전달하는 알림센터를 운영
+                    ⦁ 약 50개의 사내 Legacy 시스템들 대상 알림 발송 Rest API 서버 개발<br>
+		    ⦁ 마이크로 서비스의 중앙 저장소를 구현하여 설정 정보 무중단 배포 환경 구성<br>
+		    ⦁ 오픈소스 활용하여 분산 로그 추적 환경 구현
+		    ⦁ Kafka Failover 기능 구현을 통해 매뉴얼 작업 최소화
+		    ⦁ MongoDB 인덱스 개선 및 DB 불합리 개선
                 </p>
             </div>
             <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
                 <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
-                <h4>Software 개발/운영</h4>
+                <h4>Simulation Software 개발/운영</h4>
                 <p>
-                    짧게는 1년, 길게는 10년치 Capa Simulation을 통해 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당자
+                    ⦁ 약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
+	            ⦁ 조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
+		    ⦁ 사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
+		    ⦁ 약 20TB의 Oracle DB 운영
+		    ⦁ Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
+		    ⦁ Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
                 </p>
             </div>
         </div>
