--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         <div id="experience-timeline">
 	    <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
                 <h3>사내 알림센터 개발/운영(Backend)</h3>
-                <h4>일 평균 Request 400만건의 MSA 기반 Rest API 서버 개발/운영</h4>
+                <h4>MSA 기반 Rest API 서버 개발/운영</h4>
                 <p>
-                    ⦁ 약 50개의 사내 Legacy 시스템들 대상 알림 발송 Rest API 서버 개발<br>
+                    ⦁ 약 50개의 사내 Legacy 시스템들을 대상으로 일 평균 Request 400만건의 Rest API 서버 개발<br>
 		    ⦁ 마이크로 서비스의 중앙 저장소를 구현하여 설정 정보 무중단 배포 환경 구성<br>
 		    ⦁ 오픈소스 활용하여 분산 로그 추적 환경 구현
 		    ⦁ Kafka Failover 기능 구현을 통해 매뉴얼 작업 최소화
