--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		    <br>⦁  사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
 		    <br>⦁  약 20TB의 Oracle DB 운영
 		    <br>⦁  Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
-		    <br>⦁  Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring.
+		    <br>⦁  Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
                 </p>
             </div>
         </div>
@@ -119,9 +119,9 @@
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
-                    <div class="project-image">
+                    <!--<div class="project-image">
                         <img src="images/project.jpg" />
-                    </div>
+                    </div> -->
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Project Name Here</h3>
