--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
-                <div class="project shadow-large">
+                 <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Project Name Here</h3>
