--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
+		     <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
+	                <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
+	                <h4>Simulation Software 개발/운영</h4>
+	                <p>
+	                    ⦁  약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
+		            <br>⦁  조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
+			    <br>⦁  사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
+			    <br>⦁  약 20TB의 Oracle DB 운영
+			    <br>⦁  Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
+			    <br>⦁  Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
+	                </p>
+	            </div>
+		
                 </div>
                 <!-- End .project -->
             </div>
