--- a/index.html
+++ b/index.html
@@ -118,11 +118,7 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
-                 <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
+                 <div class="project no-image">
                     <div class="project-info">
                         <h3>알림센터 일하는 방식 개선</h3>
                         <p>
