--- a/index.html
+++ b/index.html
@@ -135,53 +135,61 @@
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
+		<div class="project no-image">
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>알림센터 일하는 방식 개선</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
+			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
+			    <br>⦁  spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
+			    <br>⦁  Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
+		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
+			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
+			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
                         </p>
-                        <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
+		<div class="project no-image">
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Capa Simulation 관련 핵심 Oracle Table 파티션 전환</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
+			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
+			    <br>⦁  spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
+			    <br>⦁  Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
+		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
+			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
+			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
                         </p>
-                        <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
+		<div class="project no-image">
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>알림센터 일하는 방식 개선</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
+			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
+			    <br>⦁  spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
+			    <br>⦁  Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
+		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
+			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
+			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
                         </p>
-                        <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+
+
+
+		    
             </div>
         </div>
     </div>
