--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row">
                  <div class="project no-image">
                     <div class="project-info">
-                        <h3>[알림센터 일하는 방식 개선]</h3>
+                         <h3>2023.01 ~ 현재          [알림센터 일하는 방식 개선]</h3>
                         <p>
                             ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
 			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
