--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                             ⦁  Simulation Logic을 Oracle PL/SQL을 통해 DB자원으로 수행하고 있었으나, 메모리 기반으로 AP자원을 사용하도록 Refactoring
 			    <br>⦁  Simulation 1,2,3,4 단계에 해당하는 Oralce Package의 쿼리를 Java로 전환
 			    <br>⦁  Tibco사의 BusinessWorks 툴을 통해 Java 기반으로 Refactoring, .ear 파일로 빌드 배포 수행
-			    <br>⦁  초기 Input Data를 DB에서 가져오는 것과, 최종 Output Data를 DB에 적재하는 부분 제외하고 계산하는 것을 메모리단에서 수행
-		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
-			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
-			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
+			    <br>⦁  장기 Simulation 수행 시 로컬 PC로는 OutOfMemoryError가 발생하여, 부분별 Debugging 가이드 체계 구축
+		            <br>⦁  로컬 PC Debugging 한계로 인해 log를 세분화하여 적재, 모니터링 툴을 통해 Simulation 단계별 모니터링 수행
+			    <br>⦁  Simulation 기간별, 제품별로 AP자원 사용량 체크 후, 서버 4대를 단기/장기/공용으로 분리하여 동시 Simulation 실행가능횟수 최대화
+			    <br>⦁  Simulation 실행 시간은 기존대비 평균 0.28배 수준으로 감소
                         </p>
                     </div>
                     <!-- End .project-info -->
