--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
                 <h3>사내 알림센터 개발/운영(Backend)</h3>
                 <h4>MSA 기반 Rest API 서버 개발/운영</h4>
                 <p>
-                    ⦁  약 50개의 사내 Legacy 시스템들을 대상으로 일 평균 Request 400만건의 Rest API 서버 개발
-		    <br>⦁  마이크로 서비스의 중앙 저장소를 구현하여 설정 정보 무중단 배포 환경 구성
-		    <br>⦁  오픈소스 활용하여 분산 로그 추적 환경 구현
-		    <br>⦁  Kafka Failover 기능 구현을 통해 매뉴얼 작업 최소화
-		    <br>⦁  MongoDB 인덱스 개선 및 DB 불합리 개선
+                    ⦁ &nbsp;약 50개의 사내 Legacy 시스템들을 대상으로 일 평균 Request 400만건의 Rest API 서버 개발
+		    <br>⦁ &nbsp;마이크로 서비스의 중앙 저장소를 구현하여 설정 정보 무중단 배포 환경 구성
+		    <br>⦁ &nbsp;오픈소스 활용하여 분산 로그 추적 환경 구현
+		    <br>⦁ &nbsp;Kafka Failover 기능 구현을 통해 매뉴얼 작업 최소화
+		    <br>⦁ &nbsp;MongoDB 인덱스 개선 및 DB 불합리 개선
                 </p>
             </div>
             <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
                 <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
                 <h4>Simulation Software 개발/운영</h4>
                 <p>
-                    ⦁  약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
-	            <br>⦁  조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
-		    <br>⦁  사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
-		    <br>⦁  약 20TB의 Oracle DB 운영
-		    <br>⦁  Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
-		    <br>⦁  Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
+                    ⦁ &nbsp;약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
+	            <br>⦁ &nbsp;조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
+		    <br>⦁ &nbsp;사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
+		    <br>⦁ &nbsp;약 20TB의 Oracle DB 운영
+		    <br>⦁ &nbsp;Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
+		    <br>⦁ &nbsp;Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
                 </p>
             </div>
         </div>
@@ -120,15 +120,15 @@
             <div class="row">
                  <div class="project no-image">
                     <div class="project-info">
-                         <h3>2023.01 ~ 현재          [알림센터 일하는 방식 개선]</h3>
+                         <h3>2023.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[알림센터 일하는 방식 개선]</h3>
                         <p>
-                            ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
-			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
-			    <br>⦁  spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
-			    <br>⦁  Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
-		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
-			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
-			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
+                            ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
+			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
+			    <br>⦁ &nbsp;spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
+			    <br>⦁ &nbsp;Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
+		            <br>⦁ &nbsp;spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
+			    <br>⦁ &nbsp;현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
+			    <br>⦁ &nbsp;Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
                         </p>
                     </div>
                     <!-- End .project-info -->
@@ -137,15 +137,15 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2021.08 ~ 2022.10          [Simulation Logic DB자원에서 AP자원으로 Refactoring]</h3>
+                        <h3>2021.08 ~ 2022.10 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Simulation Logic DB자원에서 AP자원으로 Refactoring]</h3>
                         <p>
                             ⦁  Simulation Logic을 Oracle PL/SQL을 통해 DB자원으로 수행하고 있었으나, 메모리 기반으로 AP자원을 사용하도록 Refactoring
-			    <br>⦁  Simulation 1,2,3,4 단계에 해당하는 Oralce Package의 쿼리를 Java로 전환
-			    <br>⦁  Tibco사의 BusinessWorks 툴을 통해 Java 기반으로 Refactoring, .ear 파일로 빌드 배포 수행
-			    <br>⦁  장기 Simulation 수행 시 로컬 PC로는 OutOfMemoryError가 발생하여, 부분별 Debugging 가이드 체계 구축
-		            <br>⦁  로컬 PC Debugging 한계로 인해 log를 세분화하여 적재, 모니터링 툴을 통해 Simulation 단계별 모니터링 수행
-			    <br>⦁  Simulation 기간별, 제품별로 AP자원 사용량 체크 후, 서버 4대를 단기/장기/공용으로 분리하여 동시 Simulation 실행가능횟수 최대화
-			    <br>⦁  Simulation 실행 시간은 기존대비 평균 0.28배 수준으로 감소
+			    <br>⦁ &nbsp;Simulation 1,2,3,4 단계에 해당하는 Oralce Package의 쿼리를 Java로 전환
+			    <br>⦁ &nbsp;Tibco사의 BusinessWorks 툴을 통해 Java 기반으로 Refactoring, .ear 파일로 빌드 배포 수행
+			    <br>⦁ &nbsp;장기 Simulation 수행 시 로컬 PC로는 OutOfMemoryError가 발생하여, 부분별 Debugging 가이드 체계 구축
+		            <br>⦁ &nbsp;로컬 PC Debugging 한계로 인해 log를 세분화하여 적재, 모니터링 툴을 통해 Simulation 단계별 모니터링 수행
+			    <br>⦁ &nbsp;Simulation 기간별, 제품별로 AP자원 사용량 체크 후, 서버 4대를 단기/장기/공용으로 분리하여 동시 Simulation 실행가능횟수 최대화
+			    <br>⦁ &nbsp;Simulation 실행 시간은 기존대비 평균 0.28배 수준으로 감소
                         </p>
                     </div>
                     <!-- End .project-info -->
@@ -154,16 +154,16 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2021.01 ~ 2022.06          [Capa Simulation 핵심 Oracle Table 파티션 전환]</h3>
+                        <h3>2021.01 ~ 2022.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 핵심 Oracle Table 파티션 전환]</h3>
                         <p>
                             ⦁  대량의 데이터 삭제 이후, 조회, 변경, 삭제 등 모든 부분에서 성능이슈 발생
-			    <br>⦁  테이블 Move를 통한 Reorg 작업을 주기적으로 수행할수 없어, 데이터 삭제가 빈번하게 발생하는 대용량 테이블들의 파티션 전환을 검토
-			    <br>⦁  Biz Process 특성상 단순한 월별 파티션 구조로 전환이 불가능하여, 결합(Coomposite) 파티션 구조 적용
-			    <br>⦁  Range(WORK_YM) + Hash(SIMUL_VER) 파티션과 Range(WORK_YM) + List(단기/중기/장기) 파티션 구조를 비교 검토
-		            <br>⦁  Range + Hash 적용시 소스 수정 영향도가 매우 적은 장점이 있지만, 특정 월에 삭제 불가 Simulation 버전이 있을시 해당 월은 전체 삭제 불가능한 단점이 있음을 고려하여 미채택
-			    <br>⦁  Range + List 를 채택하여 비록 소스 수정 영향도가 크지만, 삭제 불가 Simulation 버전을 예외 파티션에 모아놓음으로써 DB 용량 확보가 충분히 가능한 점을 중점에 뒀고, 충분한 테스트/검증을 걸쳐 파티션 전환 수행
-			    <br>⦁  12개의 Simulation 핵심 테이블을 파티션 테이블 전환을 통해 Simulation 실행속도 15% 개선
-			    <br>⦁  37개의 Oracle Package, Procedure, Funtion 및 79개의 xml 파일 소스를 수정
+			    <br>⦁ &nbsp;테이블 Move를 통한 Reorg 작업을 주기적으로 수행할수 없어, 데이터 삭제가 빈번하게 발생하는 대용량 테이블들의 파티션 전환을 검토
+			    <br>⦁ &nbsp;Biz Process 특성상 단순한 월별 파티션 구조로 전환이 불가능하여, 결합(Coomposite) 파티션 구조 적용
+			    <br>⦁ &nbsp;Range(WORK_YM) + Hash(SIMUL_VER) 파티션과 Range(WORK_YM) + List(단기/중기/장기) 파티션 구조를 비교 검토
+		            <br>⦁ &nbsp;Range + Hash 적용시 소스 수정 영향도가 매우 적은 장점이 있지만, 특정 월에 삭제 불가 Simulation 버전이 있을시 해당 월은 전체 삭제 불가능한 단점이 있음을 고려하여 미채택
+			    <br>⦁ &nbsp;Range + List 를 채택하여 비록 소스 수정 영향도가 크지만, 삭제 불가 Simulation 버전을 예외 파티션에 모아놓음으로써 DB 용량 확보가 충분히 가능한 점을 중점에 뒀고, 충분한 테스트/검증을 걸쳐 파티션 전환 수행
+			    <br>⦁ &nbsp;12개의 Simulation 핵심 테이블을 파티션 테이블 전환을 통해 Simulation 실행속도 15% 개선
+			    <br>⦁ &nbsp;37개의 Oracle Package, Procedure, Funtion 및 79개의 xml 파일 소스를 수정
                         </p>
                     </div>
                     <!-- End .project-info -->
@@ -172,15 +172,15 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>알림센터 일하는 방식 개선</h3>
+                        <h3>2021.01 ~ 2022.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 구축]</h3>
                         <p>
-                            ⦁  Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
-			    <br>⦁  허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
-			    <br>⦁  spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
-			    <br>⦁  Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
-		            <br>⦁  spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
-			    <br>⦁  현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
-			    <br>⦁  Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
+                            ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
+			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
+			    <br>⦁ &nbsp;spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
+			    <br>⦁ &nbsp;Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
+		            <br>⦁ &nbsp;spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
+			    <br>⦁ &nbsp;현재 업무 R&R상 '알림 수집'을 담당하고 있으며, '알림 배포'를 담당하는 협업 부서에게도 spring sleuth, zipkin를 확대 적용 요청하여, 알림센터 전반의 분산 로그 추적을 구현 중
+			    <br>⦁ &nbsp;Legacy 담당자들과의 소통 채널 및 Confluence 운영을 통해 알림센터 일하는 방식 개선
                         </p>
                     </div>
                     <!-- End .project-info -->
