--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2019.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 시스템 구축 및 정합성 개선]</h3>
+                        <h3>2019.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 시스템 구축 및 Capa 정합성 개선]</h3>
                         <p>
                             ⦁ &nbsp;시스템 산출 투자 금액과 실제 장비투자금액과의 차이를 주기적으로 Monitoring
 			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 구현하여 투자비 절감
