--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 구현하여 투자비 절감
 			    <br>⦁ &nbsp;신규 FAB Open 시기 결정을 위해 장기 Simulation간 투자 비용 비교 기능 및 대시보드 구현 
 			    <br>⦁ &nbsp;보유대수 없이 Tech별 전환비용 산출 Process 구현
-		            <br>⦁ &nbsp;Simulation Data의 정합성을 검증할 수 있는 생산계획대비 과부족 지수를 구현
+		            <br>⦁ &nbsp;Simulation Data의 정합성을 검증할 수 있는 생산계획대비 과부족 지수를 구현.
                         </p>
                     </div>
                     <!-- End .project-info -->
