--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row">
                  <div class="project no-image">
                     <div class="project-info">
-                         <h3>2023.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[알림센터 일하는 방식 개선]</h3>
+                         <h3>2023.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[알림센터 일하는 방식 개선]</h3>
                         <p>
                             ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
 			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
@@ -172,13 +172,13 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2019.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 시스템 설계/개발]</h3>
+                        <h3>2019.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 시스템 설계/개발]</h3>
                         <p>
                             ⦁ &nbsp;시스템 산출 투자 금액과 실제 장비투자금액과의 차이를 주기적으로 Monitoring
 			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 구현하여 투자비 절감
 			    <br>⦁ &nbsp;신규 FAB Open 시기 결정을 위해 장기 Simulation간 투자 비용 비교 기능 및 대시보드 구현 
 			    <br>⦁ &nbsp;보유대수 없이 Tech별 전환비용 산출 Process 구현
-		            <br>⦁ &nbsp;Simulation Data의 정합성을 검증할 수 있는 생산계획대비 과부족 지수를 구현.
+		            <br>⦁ &nbsp;Simulation Data의 정합성을 검증할 수 있는 생산계획대비 과부족 지수를 구현
                         </p>
                     </div>
                     <!-- End .project-info -->
