--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- End #experience -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading";text-align:left>Projects</h2>
+        <h2 class="heading";text-align:center>Projects</h2>
         <div class="container">
             <div class="row">
                  <div class="project no-image">
