--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-			<p style="color:#696b6e;"  margin-top: 0.5em; margin-bottom: 0.5em;>2019.01 ~ 현재</p>
-                        <h3>[Capa Simulation 시스템 설계/개발]</h3>
+			<p style="color:#696b6e;">2019.01 ~ 현재</p>
+                        <h3 font-weight: bold;>[Capa Simulation 시스템 설계/개발]</h3>
                         <p>
                             ⦁ &nbsp;시스템 산출 투자 금액과 실제 장비투자금액과의 차이를 주기적으로 Monitoring
 			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 구현하여 투자비 절감
