--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             <div class="row">
                  <div class="project no-image">
                     <div class="project-info">
-                         <h3>2023.01 ~ 현재 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[알림센터 일하는 방식 개선]</h3>
+			<p style="color:#696b6e;">2023.01 ~ 현재</p>
+                        <h3>[알림센터 일하는 방식 개선]</h3>
                         <p>
                             ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
 			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
@@ -137,7 +138,8 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2021.08 ~ 2022.10 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Simulation Logic DB자원에서 AP자원으로 Refactoring]</h3>
+			<p style="color:#696b6e;">2021.08 ~ 2022.10</p>
+                        <h3>[Simulation Logic DB자원에서 AP자원으로 Refactoring]</h3>
                         <p>
                             ⦁  Simulation Logic을 Oracle PL/SQL을 통해 DB자원으로 수행하고 있었으나, 메모리 기반으로 AP자원을 사용하도록 Refactoring
 			    <br>⦁ &nbsp;Simulation 1,2,3,4 단계에 해당하는 Oralce Package의 쿼리를 Java로 전환
@@ -154,7 +156,8 @@
 
 		<div class="project no-image">
                     <div class="project-info">
-                        <h3>2021.01 ~ 2021.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[Capa Simulation 핵심 Oracle Table 파티션 전환]</h3>
+			<p style="color:#696b6e;">2021.01 ~ 2021.06</p>
+                        <h3>[Capa Simulation 핵심 Oracle Table 파티션 전환]</h3>
                         <p>
                             ⦁  대량의 데이터 삭제 이후, 조회, 변경, 삭제 등 모든 부분에서 성능이슈 발생
 			    <br>⦁ &nbsp;테이블 Move를 통한 Reorg 작업을 주기적으로 수행할수 없어, 데이터 삭제가 빈번하게 발생하는 대용량 테이블들의 파티션 전환을 검토
