--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 	    <div data-date="SK 하이닉스 <br> 2023.01 ~ 현재">
-                <h3>사내 알림센터 개발/운영(Backend)</h3>
-                <h4>MSA 기반 Rest API 서버 개발/운영</h4>
+                <h3>사내 알림센터 웹 서버 개발/운영</h3>
+                <h4>마이크로서비스 아키텍쳐 기반 Rest API 서버</h4>
                 <p>
                     ⦁ &nbsp;약 50개의 사내 Legacy 시스템들을 대상으로 일 평균 Request 400만건의 Rest API 서버 개발
 		    <br>⦁ &nbsp;마이크로 서비스의 중앙 저장소를 구현하여 설정 정보 무중단 배포 환경 구성
@@ -99,8 +99,8 @@
                 </p>
             </div>
             <div data-date="SK 하이닉스 <br> 2018.07 ~ 현재">
-                <h3>반도체장비 투자 Capa Simulation 시스템 개발/운영</h3>
-                <h4>Simulation Software 개발/운영</h4>
+                <h3>반도체장비 투자 Simulation 시스템 개발/운영</h3>
+                <h4>C#, Java 기반 Capa Simulation 시스템</h4>
                 <p>
                     ⦁ &nbsp;약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
 	            <br>⦁ &nbsp;조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
