--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 		<div class="project no-image">
                     <div class="project-info">
 			<p style="color:#696b6e;">2021.01 ~ 2021.06</p>
-                        <h3>[Capa Simulation 핵심 Oracle Table 파티션 전환]</h3>
+                        <h3>[대용량 Oracle Table 파티션 전환]</h3>
                         <p>
                             ⦁  대량의 데이터 삭제 이후, 조회, 변경, 삭제 등 모든 부분에서 성능이슈 발생
 			    <br>⦁ &nbsp;테이블 Move를 통한 Reorg 작업을 주기적으로 수행할수 없어, 데이터 삭제가 빈번하게 발생하는 대용량 테이블들의 파티션 전환을 검토
