--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
 			<p style="color:#696b6e;">2019.01 ~ 현재</p>
                         <h3 font-weight: bold;>[Capa Simulation 시스템 설계/개발]</h3>
                         <p>
-                            ⦁ &nbsp;시스템 산출 투자 금액과 실제 장비투자금액과의 차이를 주기적으로 Monitoring
-			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 구현하여 투자비 절감
+                            ⦁ &nbsp;시스템 산출 투자 금액과 실제 장비투자금액과의 차이를 주기적으로 Monitoring하여 경영계획 산출시 Capa Simulation 정합성 체크
+			    <br>⦁ &nbsp;창고 장비 개조/재배치 Logic을 PL/SQL 기반으로 구현하여 투자비 절감 
+			    <br>⦁ &nbsp;FAB간 Back-up Logic을 PL/SQL 기반으로 구현 
 			    <br>⦁ &nbsp;신규 FAB Open 시기 결정을 위해 장기 Simulation간 투자 비용 비교 기능 및 대시보드 구현 
 			    <br>⦁ &nbsp;보유대수 없이 Tech별 전환비용 산출 Process 구현
-		            <br>⦁ &nbsp;Simulation Data의 정합성을 검증할 수 있는 생산계획대비 과부족 지수를 구현
-			    <br>⦁ &nbsp;테이블 용량 관리를 위한 데이터 삭제 유형 및 삭제 배치 Process 구현
+		            <br>⦁ &nbsp;Simulation Data의 생산계획대비 과부족 지수 체계화, Master Data (장비/제품) 연계 
+			    <br>⦁ &nbsp;테이블 용량 관리를 위한 데이터 삭제 유형 구분작업 및 유형별 삭제 배치 구현
                         </p>
                     </div>
                     <!-- End .project-info -->
