--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="col-md-8">
                     <p>
                         Java & Spring 기반의 6년차 서버 백엔드 엔지니어입니다. 일 평균 Request 400만건의 마이크로서비스 아키텍쳐 기반 사내 알림센터 Rest API 서버를 단독으로 개발/운영중이며, 이와 동시에 약 10년간의 반도체 장비 투자를 Simulation하는 시스템을 담당하고있습니다.
-			<br><br>투자 Simulation 시스템 담당자로서, 안정적인 시스템 운영 및 유지보수 업무에 만족하지 않고 백엔드 개발을 충분히 할 수 있는 사내 알림센터 업무에 지원하여 서버 백엔드 개발 경험을 쌓고 있습니다.
-			<br><br>시스템 담당자로서 주로 시스템 운영,과제 PI의 역량을 키워왔으나 현재는 개발을 집중적으로 하는 업무를 병행하면서 개발과 시스템설계 역량을 균형있게 발전시키려고 노력하고 있습니다.
+			<br>투자 Simulation 시스템 담당자로서, 안정적인 시스템 운영 및 유지보수 업무에 만족하지 않고 백엔드 개발을 충분히 할 수 있는 사내 알림센터 업무에 지원하여 서버 백엔드 개발 경험을 쌓고 있습니다.
+			<br>시스템 담당자로서 주로 시스템 운영,과제 PI의 역량을 키워왔으나 현재는 개발을 집중적으로 하는 업무를 병행하면서 개발과 시스템설계 역량을 균형있게 발전시키려고 노력하고 있습니다.
                     </p>
                 </div>
             </div>
