--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div id="lead-content">
             <h1>위형규</h1>
             <h2>Backend Engineer</h2>
-	    <span style="color:white;">github  :    </span>
+	    <span style="color:white;">github : &nbsp;&nbsp;</span>
 	    <a href="https://github.com/dnl1029" style = "color: white;">https://github.com/dnl1029</a>
 		<br>
-	    <span style="color:white;">blog  :    </span>
+	    <span style="color:white;">blog : &nbsp;&nbsp;</span>
 	    <a href="https://dnl1029.tistory.com" style = "color: white;">https://dnl1029.tistory.com</a>
         </div>
         <!-- End #lead-content -->
