--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     ⦁ &nbsp;약 10년간의 Capa Simulation 기능을 제공하여 반도체 장비 투자대수 및 투자금액을 산출하는 시스템 담당
 	            <br>⦁ &nbsp;조 단위의 Simulation 금액을 산출하여 경영 계획 및 신규 FAB Open 의사결정 지원
 		    <br>⦁ &nbsp;사내 Framework, Java, Oracle 환경에서 시스템 개발/운영
-		    <br>⦁ &nbsp;약 20TB의 Oracle DB 운영
+		    <br>⦁ &nbsp;약 20TB 규모의 Oracle DB 운영
 		    <br>⦁ &nbsp;Simulation 성능 향상을 위한 PL/SQL 쿼리 튜닝 및 파티션 테이블 전환
 		    <br>⦁ &nbsp;Simulation 성능 향상을 위한 핵심 Biz 쿼리 Java 기반으로 Refactoring
                 </p>
