--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <h3>[Simulation Logic DB자원에서 AP자원으로 Refactoring]</h3>
                         <p>
                             ⦁  Simulation Logic을 Oracle PL/SQL을 통해 DB자원으로 수행하고 있었으나, 메모리 기반으로 AP자원을 사용하도록 Refactoring
-			    <br>⦁ &nbsp;Simulation 1,2,3,4 단계에 해당하는 Oralce Package의 쿼리를 Java로 전환
+			    <br>⦁ &nbsp;Simulation 1,2,3,4 단계에 해당하는 Oracle Package의 쿼리를 Java로 전환
 			    <br>⦁ &nbsp;Tibco사의 BusinessWorks 툴을 통해 Java 기반으로 Refactoring, .ear 파일로 빌드 배포 수행
 			    <br>⦁ &nbsp;장기 Simulation 수행 시 로컬 PC로는 OutOfMemoryError가 발생하여, 부분별 Debugging 가이드 체계 구축
 		            <br>⦁ &nbsp;로컬 PC Debugging 한계로 인해 log를 세분화하여 적재, 모니터링 툴을 통해 Simulation 단계별 모니터링 수행
