--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                  <div class="project no-image">
                     <div class="project-info">
 			<p style="color:#696b6e;">2023.01 ~ 현재</p>
-                        <h3>[알림센터 일하는 방식 개선]</h3>
+                        <h3>[마이크로 서비스 아키텍쳐 기반 알림센터 시스템 고도화]</h3>
                         <p>
                             ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
 			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
