--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p>
                             ⦁ &nbsp;Mongo DB의 초기 인덱스 설계 미스로 불편하게 알림을 추적하고 있어, Background로 인덱스 리빌드 작업을 수행하여 알림 유실 없이 DB 개선
 			    <br>⦁ &nbsp;허가되지 않은 사용자의 알림요청을 막도록 시스템 단위로 api-key 발급, 인증/인가 체계 자동화
-			    <br>⦁ &nbsp;Kafka 장애시 Failover 기능의 Rest API 개발
+			    <br>⦁ &nbsp;Kafka 장애시 Http통신으로 Failover하는 기능의 자동화 구현
 			    <br>⦁ &nbsp;spring cloud config활용하여 config서버, 중앙저장소 구현하여 개발/QA/운영서버의 config 설정파일을 분리
 			    <br>⦁ &nbsp;Bitbucket Webhook, redis pub/sub을 통해 중앙저장소의 .yml파일 변경을 App Service단 Client에 자동 반영 구조 구현
 		            <br>⦁ &nbsp;spring sleuth, zipkin을 활용하여 인메모리 기반으로 마이크로서비스 분산 로그 추적 구현, ElasticSearch 연동 진행 중
